# dataclass_struct

./: .editorconfig  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  dataclass_struct.py  setup.cfg  setup.py  test_compiled_dataclass.py  test_dataclass_struct.py
.github/workflows/: python-package.yml
dataclass_struct/: __init__.py
