[metadata]
name = dataclass_struct
version = 0.9.5
author = Peter Krahulik
author_email = peter.krahulik@googlemail.com
license = MIT
description = Decorator for writing and reading the dataclass as binary buffer using struct.
keywords = dataclass, struct
url = https://github.com/Thinkeye/dataclass_struct
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = dataclass_struct
install_requires =
    dataclasses>=0.8; python_version=="3.6"
python_requires = >=3.6
include_package_data = True
